요구사항 6.2 - ListRequest 